test/distributions/bradc/blkCyc/blkCycSliceOOB.good
blkCycSliceOOB.chpl:16: error: halt reached - array index out of bounds: (11, -4)
